[project]
name = "api-practive"
version = "0.1.0"
description = "[api practice]"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.38.19",
    "fastapi>=0.115.12",
    "greenlet>=3.2.2",
    "hashids>=1.3.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
